# blinka_firmata

./: README.md  pyproject.toml  requirements.txt
blinka_firmata/: firmata.py  firmata_constants.py
examples/: analog_reporting.py  basic_connection.py  blink.py  device_maps.py  digital_reporting.py  pwm_out.py
